WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310138
[Site isolation] 2x xss-DENIED-getSVGDocument-*.html tests are failing
https://bugs.webkit.org/show_bug.cgi?id=310138
Summary
[Site isolation] 2x xss-DENIED-getSVGDocument-*.html tests are failing
rupin
Reported
2026-03-17 15:23:28 PDT
[Site isolation] 2x xss-DENIED-getSVGDocument-*.html tests are failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-17 15:23:35 PDT
<
rdar://problem/172779838
>
rupin
Comment 2
2026-03-17 17:29:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60823
EWS
Comment 3
2026-03-18 20:51:35 PDT
Committed
309527@main
(af331edbbff1): <
https://commits.webkit.org/309527@main
> Reviewed commits have been landed. Closing PR #60823 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug