Source/WebCore/bindings/js/JSDOMBindingSecurity.h
@@ -24,6 +24,7 @@
 #pragma once
 
 #include <WebCore/ExceptionOr.h>
+#include <WebCore/HTMLFrameOwnerElement.h>
 #include <wtf/Forward.h>
 
 namespace JSC {
@@ -47,6 +48,7 @@ namespace BindingSecurity {
 
 template<typename T> T* checkSecurityForNode(JSC::JSGlobalObject&, T&);
 template<typename T> T* checkSecurityForNode(JSC::JSGlobalObject&, T*);
+template<typename T> T* checkSecurityForNodeWithOwner(JSC::JSGlobalObject&, T*, const HTMLFrameOwnerElement&);
 template<typename T> ExceptionOr<T*> checkSecurityForNode(JSC::JSGlobalObject&, ExceptionOr<T*>&&);
 template<typename T> ExceptionOr<T*> checkSecurityForNode(JSC::JSGlobalObject&, ExceptionOr<T&>&&);
 
@@ -72,6 +74,17 @@ template<typename T> inline T* BindingSecurity::checkSecurityForNode(JSC::JSGlob
 template<typename T> inline T* BindingSecurity::checkSecurityForNode(JSC::JSGlobalObject& lexicalGlobalObject, T* node)
 {
     return shouldAllowAccessToNode(lexicalGlobalObject, node) ? node : nullptr;
+}
+
+template<typename T> inline T* BindingSecurity::checkSecurityForNodeWithOwner(JSC::JSGlobalObject& lexicalGlobalObject, T* node, const HTMLFrameOwnerElement& owner)
+{
+    if (node)
+        return shouldAllowAccessToNode(lexicalGlobalObject, node) ? node : nullptr;
+
+    // If the node is null because it lives in a RemoteFrame and so the owner could
+    // not access it, log the cross-origin error.
+    shouldAllowAccessToFrame(&lexicalGlobalObject, owner.contentFrame());
+    return nullptr;
 }
 
 template<typename T> inline ExceptionOr<T*> BindingSecurity::checkSecurityForNode(JSC::JSGlobalObject& lexicalGlobalObject, ExceptionOr<T*>&& value)
